# Vortex.Plus.AIS_fork

./: Cargo.toml  LICENSE  README.md
src/: vortex.rs
src/Vortex2+2/: style.css
src/Vortex2+2/assets/mdl/: sword_mdl.mtl
src/Vortex2+2/javascript/: maploader.js  overrider.js  search.js  shader.js
src/Vortex2+2/redirects/: vortex2+2_demoparts.js  vortex2+2_engine.js  vortex2+2_multiplayer.js
src/javascript/: maploader.js  overrider.js  shader.js
src/mdl/: swordMdl.fbx  swordMdl.mtl
src/modules/three/: OBJLoader.js
src/redirects/: multiplayer2+2.js  new_demoparts.js  new_engine.js
src/server/: data_bot.rs
src/server/fetch/: fetch_user.rs
