[package]
name = "project"
version = "0.1.0"
edition = "2024"

[dependencies]
wry = "0.55"
tao = "0.35"
serenity = "0.12"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
